author:         Jan Matějka
build-type:     Simple
cabal-version:  >= 1.16
copyright:      2014 Jan Matějka <yac@blesmrt.net>
license:        BSD3
maintainer:     <yac@blesmrt.net>
name:           YacBuildServer
synopsis:       Yac build server
version:        0.1.0

library
    build-depends:
        base < 5
        , network
        , ini
        , data-default
        , text
        , filepath
        , process >= 1.2
        , temporary
        , directory
        , unordered-containers >= 0.2.4.0
        , spawn
        , yaml
        , time
        , old-locale
        , formatting
        , bytestring
        , stm
        , mtl
        , either
        , exceptions
    default-language:   Haskell2010
    exposed-modules:
          YacBuildServer.Git
        , YacBuildServer.Jobs
        , YacBuildServer.Server
        , YacBuildServer.Server.Config
        , YacBuildServer.Logging
        , YacBuildServer.Types
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:     library

executable yac-build-server
    main-is: main.hs
    hs-source-dirs:
        executable
    default-language:   Haskell2010
    ghc-options:
        -Wall
    build-depends:
        base < 5
        , YacBuildServer

test-suite tests
    build-depends:
        base < 5
        , YacBuildServer
        , mtl
        , either
        , data-default
        , hspec
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    hs-source-dirs:
        tests/unit
    main-is:
        Spec.hs
    other-modules:
        YacBuildServer.ServerSpec
    type:
        exitcode-stdio-1.0

test-suite documentation
    build-depends:
        base < 5
        , process == 1.*
        , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        tests
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base < 5
        , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        tests
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0
